hub/manifests/hub/05-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-token
  namespace: hub
spec:
  forwardAuth:
    address: http://hub-token.hub.svc.cluster.local:80/internal/verify-token
    authResponseHeaders:
      - Workspace-Id
      - Cluster-Id

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: hub
spec:
  stripPrefix:
    prefixes:
      - /alert
      - /certificates
      - /check
      - /cluster
      - /gslb
      - /invitation
      - /metrics
      - /notification
      - /offer
      - /user
      - /token
      - /topology-indexer  # the order of strip prefixes is important ! :-/
      - /topology
      - /workspace
