hub/manifests/hub/02-hub-notification.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-notification
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-notification
  template:
    metadata:
      labels:
        app: hub-notification
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-notification
          image: gcr.io/traefiklabs/hub-notification:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --sendgrid-host=https://api.sendgrid.com/v3/
            - --sendgrid-endpoint=/mail/send
            - --sendgrid-alert-template-id=d-e31e1f5ce35c4b95b8390d19ce1a2543
            - --sendgrid-invitation-template-id=d-31a4a51c91f245728e419d5980fe1bbc
            - --sendgrid-beta-invitation-template-id=d-57cb9d7ad67e4fddb83db4c9b372eb91
            - --sendgrid-welcome-template-id=d-267cf2806d0f4cdc99a1c1d2cbd6d3dc
            - --sendgrid-from=noreply@traefik.io
            - --sendgrid-from-name=Me

---
apiVersion: v1
kind: Service
metadata:
  name: hub-notification
  namespace: hub
  labels:
    app: hub-notification
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-notification
  selector:
    app: hub-notification
