hub/manifests/hub/02-hub-acp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-acp
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-acp
  template:
    metadata:
      labels:
        app: hub-acp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-acp
          image: gcr.io/traefiklabs/hub-acp:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-acp
  namespace: hub
  labels:
    app: hub-acp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-acp
    - port: 40000
      targetPort: 40000
      name: hub-acp-debug
  selector:
    app: hub-acp

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: acp-agent-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/agent/acps`)
      services:
        - name: hub-acp
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: acp-agent
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/agent/acps`)
      services:
        - name: hub-acp
          port: 80
      middlewares:
        - name: auth-token
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: acp-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/acp/external`)
      services:
        - name: hub-acp
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: acp-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/acp/external`)
      services:
        - name: hub-acp
          port: 80
      middlewares:
        - name: stripprefix
