hub/manifests/hub/02-hub-admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-admin
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-admin
  template:
    metadata:
      labels:
        app: hub-admin
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-admin
          image: gcr.io/traefiklabs/hub-admin:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-admin
  namespace: hub
  labels:
    app: hub-admin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-admin
    - port: 40000
      targetPort: 40000
      name: hub-admin-debug
  selector:
    app: hub-admin

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/admin/internal`)
      services:
        - name: hub-admin
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/admin/internal`)
      services:
        - name: hub-admin
          port: 80
      middlewares:
        - name: stripprefix
