hub/manifests/hub/02-hub-alert.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-alert
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-alert
  template:
    metadata:
      labels:
        app: hub-alert
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-alert
          image: gcr.io/traefiklabs/hub-alert:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://root:admin@mongodb.mongo.svc.cluster.local:27017/alerts?authSource=admin

---
apiVersion: v1
kind: Service
metadata:
  name: hub-alert
  namespace: hub
  labels:
    app: hub-alert
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-alert
  selector:
    app: hub-alert

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alert-agent-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/rules`) || Path(`/agent/notify`) || Path(`/agent/preflight`))
      services:
        - name: hub-alert
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alert-agent
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/rules`) || Path(`/agent/notify`) || Path(`/agent/preflight`))
      services:
        - name: hub-alert
          port: 80
      middlewares:
        - name: auth-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alert-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/alert/external`)
      services:
        - name: hub-alert
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alert-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/alert/external`)
      services:
        - name: hub-alert
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alert-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/alert/internal`)
      services:
        - name: hub-alert
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alert-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/alert/internal`)
      services:
        - name: hub-alert
          port: 80
      middlewares:
        - name: stripprefix
