hub/manifests/hub/02-hub-api-management.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-api-management
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-api-management
  template:
    metadata:
      labels:
        app: hub-api-management
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-api-management
          image: gcr.io/traefiklabs/hub-api-management:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-api-management
  namespace: hub
  labels:
    app: hub-api-management
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-api-management
    - port: 40000
      targetPort: 40000
      name: hub-api-management-debug
  selector:
    app: hub-api-management

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-management-agent-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (PathPrefix(`/agent/gateways`) || PathPrefix(`/agent/portals`) || PathPrefix(`/agent/apis`) || PathPrefix(`/agent/collections`) || PathPrefix(`/agent/accesses`) || PathPrefix(`/agent/users`))
      services:
        - name: hub-api-management
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-management-agent
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (PathPrefix(`/agent/gateways`) || PathPrefix(`/agent/portals`) || PathPrefix(`/agent/apis`) || PathPrefix(`/agent/collections`) || PathPrefix(`/agent/accesses`) || PathPrefix(`/agent/users`))
      services:
        - name: hub-api-management
          port: 80
      middlewares:
        - name: auth-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-management-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/api-management/external`)
      services:
        - name: hub-api-management
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-management-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/api-management/external`)
      services:
        - name: hub-api-management
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-management-sso-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sso.portal.docker.localhost`) && (PathPrefix(`/login`) || PathPrefix(`/consent`) || PathPrefix(`/error`) || PathPrefix(`/reset-password`) || PathPrefix(`/static`) || PathPrefix(`/robots.txt`))
      services:
        - name: hub-api-management
          port: 80
      middlewares:
        - name: sso-prefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-management-sso-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sso.portal.docker.localhost`) && (PathPrefix(`/login`) || PathPrefix(`/consent`) || PathPrefix(`/error`) || PathPrefix(`/reset-password`) || PathPrefix(`/static`) || PathPrefix(`/robots.txt`))
      services:
        - name: hub-api-management
          port: 80
      middlewares:
        - name: sso-prefix
