hub/manifests/hub/02-hub-certificates.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-certificates
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-certificates
  template:
    metadata:
      labels:
        app: hub-certificates
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-certificates
          image: gcr.io/traefiklabs/hub-certificates:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /config
              name: config-volume
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://root:admin@mongodb.mongo.svc.cluster.local:27017/certifications?authSource=admin
      volumes:
        - name: config-volume
          configMap:
            name: pebble-ca
---
apiVersion: v1
kind: Service
metadata:
  name: hub-certificates
  namespace: hub
  labels:
    app: hub-certificates
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-certificates
    - port: 443
      targetPort: 443
      name: hub-certificates-challenges
  selector:
    app: hub-certificates

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: certificates-agent
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Path(`/agent/certificates`)
      services:
        - name: hub-certificates
          port: 80
      middlewares:
        - name: auth-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: certificates-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/certificates/external`)
      services:
        - name: hub-certificates
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: certificates-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/certificates/external`)
      services:
        - name: hub-certificates
          port: 80
      middlewares:
        - name: stripprefix
