hub/manifests/hub/02-hub-cluster-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-cluster-proxy
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-cluster-proxy
  template:
    metadata:
      labels:
        app: hub-cluster-proxy
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-cluster-proxy
          image: gcr.io/traefiklabs/hub-cluster:latest
          imagePullPolicy: IfNotPresent
          args:
            - proxy
            - --addr=:80
            - --proxy-addr=:443
---
apiVersion: v1
kind: Service
metadata:
  name: hub-cluster-proxy
  namespace: hub
  labels:
    app: hub-cluster-proxy
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      name: hub-cluster-proxy
    - port: 40000
      targetPort: 40000
      name: hub-cluster-proxy-debug
  selector:
    app: hub-cluster-proxy

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cluster-proxy
  namespace: hub
spec:
  entryPoints:
    - cluster-proxy
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - name: hub-cluster-proxy
          port: 443
