hub/manifests/hub/02-hub-invitation.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-invitation
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-invitation
  template:
    metadata:
      labels:
        app: hub-invitation
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-invitation
          image: gcr.io/traefiklabs/hub-invitation:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://root:admin@mongodb.mongo.svc.cluster.local:27017/invitations?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: hub-invitation
  namespace: hub
  labels:
    app: hub-invitation
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-invitation
  selector:
    app: hub-invitation
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: invitation-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/invitation/external`)
      services:
        - name: hub-invitation
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: invitation-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/invitation/external`)
      services:
        - name: hub-invitation
          port: 80
      middlewares:
        - name: stripprefix
