hub/manifests/hub/02-hub-organization.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-workspace
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-workspace
  template:
    metadata:
      labels:
        app: hub-workspace
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-workspace
          image: gcr.io/traefiklabs/hub-workspace:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
              httpGet:
                port: 80
                path: /ready
              initialDelaySeconds: 5
              periodSeconds: 5
              failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://root:admin@mongodb.mongo.svc.cluster.local:27017/workspaces?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: hub-workspace
  namespace: hub
  labels:
    app: hub-workspace
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-workspace
    - port: 40000
      targetPort: 40000
      name: hub-workspace-debug
  selector:
    app: hub-workspace

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: workspace-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/workspace/external`)
      services:
        - name: hub-workspace
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: workspace-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/workspace/external`)
      services:
        - name: hub-workspace
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: workspace-auth0-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/workspace/auth0`)
      services:
        - name: hub-workspace
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: workspace-auth0
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/workspace/auth0`)
      services:
        - name: hub-workspace
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: workspace-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/workspace/internal`)
      services:
        - name: hub-workspace
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: workspace-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/workspace/internal`)
      services:
        - name: hub-workspace
          port: 80
      middlewares:
        - name: stripprefix
