hub/manifests/hub/02-hub-topology-indexer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-topology-indexer-api
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-topology-indexer-api
  template:
    metadata:
      labels:
        app: hub-topology-indexer-api
        version: "v1"
        k8s-app: hub-topology-indexer-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-topology-indexer-api
          image: gcr.io/traefiklabs/hub-topology:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve-indexer
            - --addr=:80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-topology-indexer-api
  namespace: hub
  labels:
    app: hub-topology-indexer-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-topology-indexer-api
    - port: 40000
      targetPort: 40000
      name: hub-topology-indexer-api-debug
  selector:
    app: hub-topology-indexer-api

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: topology-indexer-api-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/topology-indexer-api/internal`)
      services:
        - name: hub-topology-indexer-api
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: topology-indexer-api-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/topology-indexer-api/internal`)
      services:
        - name: hub-topology-indexer-api
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-topology-indexer
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-topology-indexer
  template:
    metadata:
      labels:
        app: hub-topology-indexer
        version: "v1"
        k8s-app: hub-topology-indexer
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-topology-indexer
          image: gcr.io/traefiklabs/hub-topology:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - index
            - --addr=:80
