hub/manifests/hub/02-hub-trace.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-trace
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-trace
  template:
    metadata:
      labels:
        app: hub-trace
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-trace
          image: gcr.io/traefiklabs/hub-trace:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-trace
  namespace: hub
  labels:
    app: hub-trace
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-trace
    - port: 40000
      targetPort: 40000
      name: hub-trace-debug
  selector:
    app: hub-trace

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hub-trace
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/trace`)
      services:
        - name: hub-trace
          port: 80
      middlewares:
        - name: stripprefix
          namespace: hub
